# quadrupedal_loco

unitree_legged_real/: CMakeLists.txt
unitree_legged_real/src/exe/: position_mode.cpp  torque_mode.cpp
unitree_ros/a1_cpp_open_source/src/: A1RobotControl.cpp  GazeboA1ROS.cpp  GazeboA1ROS.h
unitree_ros/go1_rt_control/: CMakeLists.txt
unitree_ros/go1_rt_control/src/: key_board_control.cpp  teleop_control.cpp
unitree_ros/go1_rt_control/src/QP/: QPBaseClass.cpp
unitree_ros/go1_rt_control/src/servo_control/: servo.cpp  servo.h
unitree_ros/go1_rt_control/src/whole_body_dynamics/: dynmics_compute.cpp  dynmics_compute.h
unitree_ros/mosek_nlp_kmp/: CMakeLists.txt
unitree_ros/mosek_nlp_kmp/src/: gait_nlp_kmp.cpp
unitree_ros/mosek_nlp_kmp/src/NLP/: NLPClass.cpp  NLPClass.h  NLPClass_sqp.cpp
unitree_ros/mosek_nlp_kmp/src/NLPRTControl/: NLPRTControlClass.cpp
unitree_ros/mosek_nlp_kmp/src/Robotpara/: robot_const_para_config.cpp  robot_const_para_config.h
unitree_ros/unitree_gazebo/launch/: normal.launch
unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt
unitree_ros_to_real/unitree_legged_real/src/exe/: position_mode.cpp  torque_mode.cpp  walk_mode.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/: teleop_control.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/FBControl/: fbcontrol.cpp  fbcontrol.h
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/QP/: QPBaseClass.h
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Robotpara/: robot_const_para_config.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Stateestimator/: Dob.h  ekf.h  state_estimator.cpp  state_estimator.h
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/jumping_controller/: history.npy  jumping_controller.cpp  jumping_controller.h  read_history.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/kinematics/: Kinematics.cpp  Kinematics.h
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/servo_control/: servo.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/torque_control_servo/: torque_mode.cpp  torque_mode.h  torque_mode_old.cpp
unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/whole_body_dynamics/: dynmics_compute.cpp  dynmics_compute.h
unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/: gait_nlp_kmp.cpp
unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/NLP/: NLPClass.cpp  NLPClass.h  NLPClass_sqp.cpp
unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/NLPRTControl/: NLPRTControlClass.cpp  NLPRTControlClass.h
